# cobot_remote

./: .gitignore  README.md
ESP32/: ota_remote.txt
ESP32-C3/esp32/: esp32.ino
ESP32-C3/esp32_s3/: esp32_s3.ino
ESP32-C3/wifi/: wifi.ino
ESP32-C3/wifi_client/: wifi_client.ino
ESP32/esp32_c3/: esp32_c3.ino
ESP32/esp32_s3/: display.h  esp32_s3.ino  motor.h  nvs_user.h  rgb.h  ros_esp32.h  usbmsc.h
TeleVision/: TeleVision.py  cert.pem  finger_angle.py  hand.py  key.pem  lagrange.pem  mycert.crt  mycert.key  openvr.py  pointcloud_dynamic.py  pointcloud_new.py  realsense_double_example.py  realsense_example.py  track_controller.py  zed_example.py
arm_adapter/: CMakeLists.txt  package.xml
arm_adapter/include/arm_adapter/: agilex.hpp  arx_lite.hpp  base_arm.hpp  dobot_cr5.hpp
arm_adapter/src/: agilex.cpp  arx_lite.cpp  base_arm.cpp  dobot_cr5.cpp
arm_control/: package.xml
esp32/: esp32.ino
frrobot_remote/: CMakeLists.txt  package.xml  start.sh
frrobot_remote/airbot_remote/: README.md
frrobot_remote/airbot_remote/2.9.0/: SHA1.txt  airbot_play_2.9.0_amd64.deb
frrobot_remote/scripts/: encoder.py  frrobot.py  test_encoder.py
interface/arm_control/: CMakeLists.txt
lib/libsurvive/.eggs/cmake_setuptools-0.1.3-py3.8.egg/EGG-INFO/: PKG-INFO  entry_points.txt
lib/libsurvive/tools/: CMakeLists.txt
libsurvive/.eggs/cmake_setuptools-0.1.3-py3.8.egg/EGG-INFO/: RECORD
libsurvive/.eggs/scikit_build-0.17.6-py3.8.egg/EGG-INFO/: requires.txt
oculus_reader/config/: oculus_reader.rviz
oculus_reader/oculus_reader/: oculus_reader.py  visualize_oculus_transforms.py
remote_bringup/: CMakeLists.txt  package.xml
remote_bringup/config/: agilex.yaml  dobot.yaml  oculus.yaml  vive.yaml
remote_bringup/launch/: agilex_remote.launch  arx_remote.launch  dobot_remote.launch  joystick.launch  oculus.launch  vive_node.launch
remote_bringup/rviz/: vive.rviz
remote_bringup/script/: build_survive.sh  calibration_tracker.sh
vive_ros/: CMakeLists.txt  package.xml
vive_ros/include/: base_arm.hpp  survive_publisher.hpp  survive_ros.hpp
vive_ros/launch/: joystick.launch  vive_node.launch
vive_ros/msg/: joystick.msg
vive_ros/script/: joystick.py  joystick_ws.py
vive_ros/src/: main.cpp  survive_publisher.cpp  survive_ros.cpp
